# opencv-experiments

./: .gitignore  LICENSE  README.md
01-mandelbrot/: CMakeLists.txt  README.md  main.cpp
02-colormaps/: CMakeLists.txt  Spline.h  main.cpp  spline.h  tests-Spline.cpp
03-projective-transform/: benswidgets.py  projective-transform.py
03-spline/: CMakeLists.txt  Spline.h  main.cpp
04-projective-transform/: benswidgets.py
